kubernetes/apps/gobservability/base/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gobservability-server
  namespace: gobservability
  labels:
    app: gobservability-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gobservability-server
  template:
    metadata:
      labels:
        app: gobservability-server
    spec:
      containers:
      - name: server
        image: ghcr.io/thomascardin/gobservability-server:latest
        imagePullPolicy: Always

        args:
        - "./server"
        - "-port=8080"
        - "-grpc-port=9090"
        - "-mode=release"

        ports:
        - name: http
          containerPort: 8080
        - name: grpc
          containerPort: 9090

        resources:
          requests:
            cpu: 250m
            memory: 64Mi
          limits:
            cpu: 500m
            memory: 128Mi

---
apiVersion: v1
kind: Service
metadata:
  name: gobservability-server
  namespace: gobservability
  labels:
    app: gobservability-server
spec:
  type: ClusterIP
  selector:
    app: gobservability-server
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  - name: grpc
    port: 9090
    targetPort: 9090
