kubernetes/apps/gobservability/base/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: gobservability-route
spec:
  parentRefs:
    - name: default-gateway
      namespace: default
  hostnames:
    - gobservability.ninebasetwo.net
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: "/"
      backendRefs:
        - name: gobservability-server
          port: 8080
